# cESA

./: .gitignore  LICENSE  README.md  index.bundle.js  index.html  pyproject.toml  style.css
api/main_cESA_phase1_v2_enja/: 0.json  1.json  10.json  100.json  101.json  102.json  103.json  104.json  11.json  12.json  13.json  14.json  15.json  16.json  17.json  18.json  19.json  2.json  20.json  21.json  22.json  23.json  24.json  25.json  26.json  27.json  28.json  29.json  3.json  30.json  31.json  32.json  33.json  34.json  35.json  36.json  37.json  38.json  39.json  4.json  (+65 more)
evaluation_contrastive/: annotation_simulation.py  llm_judge.py  utils.py  utils_fig.py
humeval/: cESA_guidelines.html
scripts/: 01-get_llm_judge.py  10-prepare_humeval.py  10-prepare_humeval_main.py  10-prepare_humeval_main_enit.py  10-prepare_humeval_main_enja.py  10-prepare_humeval_preablation.py  11-launch.sh  20-analyze_esa_cesa.py  20-analyze_main.py  20-analyze_preablation.py  21-analyze_cesa.py  30-prepare_wmt_mock_dump.py  31-prune_assets.py  32-prepare_static_website.sh
scripts/data/: preablation_questionnaire.json
scripts/old/: 02-annotation_simulation.py
